force-app/main/default/objects/Feedback__c/fields/Anonymity__c.field-meta.xml
<CustomField>
    <fullName>Anonymity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymity</label>
    <type>Checkbox</type>
</CustomField>