force-app/main/default/objects/Feedback__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India (+91)</fullName>
            </value>
            <value>
                <fullName>United States (+1)</fullName>
            </value>
            <value>
                <fullName>United Kingdom (+44)</fullName>
            </value>
            <value>
                <fullName>Australia (+61)</fullName>
            </value>
            <value>
                <fullName>Germany (+49)</fullName>
            </value>
            <value>
                <fullName>France (+33)</fullName>
            </value>
            <value>
                <fullName>Italy (+39)</fullName>
            </value>
            <value>
                <fullName>Brazil (+55)</fullName>
            </value>
            <value>
                <fullName>China (+86)</fullName>
            </value>
            <value>
                <fullName>Japan (+81)</fullName>
            </value>
            <value>
                <fullName>South Korea (+82)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>