force-app/main/default/objects/Feedback__c/fields/Date_Submmited__c.field-meta.xml
<CustomField>
    <fullName>Date_Submmited__c</fullName>
    <inlineHelpText>Enter Date</inlineHelpText>
    <label>Date Submmited</label>
    <type>Date</type>
</CustomField>