force-app/main/default/objects/Feedback__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-Up</label>
    <type>Checkbox</type>
</CustomField>