force-app/main/default/objects/Feedback__c/fields/Interested_in_Hosting_an_Event__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Hosting_an_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Hosting an Event</label>
    <type>Checkbox</type>
</CustomField>