force-app/main/default/objects/Feedback__c/fields/Specific_Aspects__c.field-meta.xml
<CustomField>
    <fullName>Specific_Aspects__c</fullName>
    <label>Specific Aspects</label>
    <type>TextArea</type>
</CustomField>